--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@salesforce-ux/design-system": "^2.25.6",
     "chart.js": "^4.4.7",
     "nuxt": "^3.14.1592",
     "vue": "latest",
