--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run json-server\" \"npm run dev\"",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "json-server":"json-server data/db.json --port 3001"
   },
   "dependencies": {
-    "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@nuxt/ui": "^2.19.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@salesforce-ux/design-system": "^2.25.6",
-    "chart.js": "^4.4.7",
-    "nuxt": "^3.14.1592",
+    "nuxt": "^3.14.159",
+    "nuxt-mongoose": "^1.0.6",
+    "nuxt-oidc-auth": "^0.18.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.0",
+    "cpx": "^1.5.0",
+    "json-server": "^1.0.0-beta.3",
+    "tailwindcss": "^3.4.16",
+    "vite-plugin-vue-inspector": "^5.3.1"
   }
 }
