done ag table data and give points

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "json-server": "json-server data/db.json --port 3001"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.3.3",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-enterprise": "^33.0.4",
+    "ag-grid-vue3": "^33.0.4",
     "nuxt": "^3.14.159",
     "nuxt-mongoose": "^1.0.6",
     "nuxt-oidc-auth": "^0.18.0",
